--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <section class="bg" >
     <div class="api-parent">
       <div class="api-output">
-        <button id="api-btn">GET API</button>
       </div>
+      <button id="api-btn">GET API</button>
     </div>
     <div class="add-books-parent">
       <input class="input-add" placeholder="Title"></input><br>
@@ -37,5 +37,6 @@
       <button ID="btn-delete">Delete book</button>
     </div>
   </section>
+  <script src="script.js"></script>
 </body>
 </html>
