--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <link href="main.css" rel="stylesheet" type="text/css" />
   <meta charset="utf-8">
-  <title>LAB44</title>
+  <title>LAB4</title>
 </head>
 <body>
   <section class="bg" >
@@ -13,8 +13,8 @@
       <button id="api-btn">GET API</button>
     </div>
     <div class="add-books-parent">
-      <input class="input-add" placeholder="Title"></input><br>
-      <input class="input-add" placeholder="Author"></input><br>
+      <input id="input-title" placeholder="Title"></input><br>
+      <input id="input-author" placeholder="Author"></input><br>
       <button id="add-btn">Add book</button>
     </div>
     <div class="show-parent">
