Big changes click events

--- a/index.html
+++ b/index.html
@@ -19,11 +19,7 @@
     </div>
     <div class="show-parent">
       <button id="show-btn">Show books</button>
-      <ul class="list-books">
-        <li>Title: ---- </li>
-        <li>Author: ----</li>
-        <li>Title: ---- </li>
-        <li>Author: ----</li>
+      <ul id="list-books">
       </ul>
     </div>
     <div class="change-parent">
