Big changes add, show and delete book

--- a/index.html
+++ b/index.html
@@ -18,9 +18,7 @@
       <button id="add-btn">Add book</button>
     </div>
     <div class="show-parent">
-      <button id="show-btn">Show books</button>
-      <ul id="list-books">
-      </ul>
+      <div class="bookOutput"><p id="div-text"></p></div>
     </div>
     <div class="change-parent">
       <input class="input-change" placeholder="Book ID"></input><br>
@@ -29,8 +27,8 @@
       <button id="btn-change">Change</button>
     </div>
     <div class="delete-parent">
-      <input class="input-delete" placeholder="Book ID"></input><br>
-      <button ID="btn-delete">Delete book</button>
+      <input id="input-delete" placeholder="Book ID"></input><br>
+      <button id="btn-delete">Delete book</button>
     </div>
   </section>
   <script src="script.js"></script>
