--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       <input id="input-title" placeholder="Title"></input><br>
       <input id="input-author" placeholder="Author"></input><br>
       <button id="add-btn">Add book</button>
+      <p id="errorAdd">ERROR - Please try again</p>
       <div id="api-status"></div>
       <div id="api-message"></div>
     </div>
@@ -31,6 +32,7 @@
     <div class="delete-parent">
       <input id="input-delete" placeholder="Book ID"></input><br>
       <button id="btn-delete">Delete book</button>
+      <p id="errorDelete">ERROR - Please try again</p>
     </div>
   </section>
   <script src="script.js"></script>
