Added a search API to our system

--- a/index.html
+++ b/index.html
@@ -33,6 +33,16 @@
       <button id="btn-delete">Delete book</button>
     </div>
   </section>
+  <!--SÖK EFTER BOK -->
+  <section>
+  <div id="headerSearch">
+    <input type="string" id="searchField"></input>
+    <button id="searchBtn">Search</button>
+    <ul id="searchedList"></ul>
+  </div>
+
+</section>
+
   <script src="script.js"></script>
 </body>
 </html>
