--- a/index.html
+++ b/index.html
@@ -1,53 +1,50 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <link href="main.css" rel="stylesheet" type="text/css" />
-  <meta charset="utf-8">
-  <title>LAB4</title>
-</head>
-<body>
-  <section class="bg" >
-    <div class="api-parent">
-      <div class="api-output">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" type="text/css" href="main.css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+    <title> LAB 4 - DESIGN</title>
+  </head>
+  <body>
+    <header>
+      <nav class="nav-header">
+        <h1>LIBRARY</h1>
+        <div class="api-output"></div>
+        <button id="api-btn">GET KEY</button>
+      </nav>
+      <div class="errorContainer">
+        <p id="counter"></p>
       </div>
-      <button id="api-btn">GET API</button>
-    </div>
-    <div class="add-books-parent">
-      <input id="input-title" placeholder="Title"></input><br>
-      <input id="input-author" placeholder="Author"></input><br>
-      <button id="add-btn">Add book</button>
-      <p id="errorAdd">ERROR - Please try again</p>
-      <div id="api-status"></div>
-      <div id="api-message"></div>
-    </div>
-    <div class="show-parent">
-      <div class="bookOutput"><p id="div-text"></p></div>
-    </div>
-    <div class="change-parent">
-      <input id="input-id-change" placeholder="Book ID"></input><br>
-      <input id="input-title-change" placeholder="Book Title"></input><br>
-      <input id="input-author-change" placeholder="Book Author"></input><br>
-      <button id="btnChange">Change book</button>
-    </div>
-    <div class="delete-parent">
-      <input id="input-delete" placeholder="Book ID"></input><br>
-      <button id="btn-delete">Delete book</button>
-      <p id="errorDelete">ERROR - Please try again</p>
-    </div>
-      <p id="counter"></p>
-  </section>
-  <!--SÖK EFTER BOK -->
-  <section>
-  <div id="headerSearch">
-    <h3>Search for Books</h3>
-    <div id="searchContainer">
-      <input type="string" id="searchField"></input>
-    </div>
-    <button id="searchBtn">Search</button>
-    <ul id="searchedList"></ul>
-  </div>
-</section>
-
-  <script src="script.js"></script>
-</body>
+    </header>
+    <section>
+      <div class="container-library">
+        <div class="outputBooks">
+        </div>
+        <div class="change-container">
+          <input id="input-title-change" placeholder="Title"></input>
+          <input id="input-author-change" placeholder="Author"></input>
+          <input id="input-id-change" placeholder="Book ID"></input>
+        </div>
+        <div class="delete-container">
+          <button id="btn-delete">DELETE</button>
+          <input id="input-delete" placeholder="Book ID"></input>
+        </div>
+      </div>
+      <div class="container-search">
+        <h2 id="searchText">Search books</h2>
+        <div class="container-input">
+          <input id="inputSearch" placeholder="Search.."></input>
+          <button id="buttonSearch">SEARCH</button>
+          <div class="containerApiBooks">
+            <ul id="searchedList"></ul>
+          </div>
+        </div>
+      </div>
+    </section>
+    <footer>
+    </footer>
+    <script src="script.js"></script>
+  </body>
 </html>
