Update on @media

--- a/index.html
+++ b/index.html
@@ -22,15 +22,21 @@
       <div class="container-library">
         <div class="outputBooks">
         </div>
-        <div class="change-container">
-          <input id="input-title-change" placeholder="Title"></input>
-          <input id="input-author-change" placeholder="Author"></input>
-          <input id="input-id-change" placeholder="Book ID"></input>
-        </div>
-        <div class="delete-container">
-          <button id="btn-delete">DELETE</button>
-          <input id="input-delete" placeholder="Book ID"></input>
-        </div>
+        <div class="main-input-wrap">
+          <div class="input-wrap-container">
+          <div class="change-container">
+            <input id="input-title-change" placeholder="Title"></input>
+            <input id="input-author-change" placeholder="Author"></input>
+            <input id="input-id-change" placeholder="Book ID"></input>
+          </div>
+         </div>
+         <div class="delete-container-end">
+           <div class="delete-container">
+             <button id="btn-delete">DELETE</button>
+             <input id="input-delete" placeholder="Book ID"></input>
+          </div>
+         </div>
+      </div>
       </div>
       <div class="container-search">
         <h2 id="searchText">Search books</h2>
