server message added

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
       <div class="errorContainer">
         <p id="counter"></p>
       </div>
+      <div class="msgContainer">
+        <p id="message"></p>
+      </div>
     </header>
     <section>
       <div class="container-library">
