--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="outputBooks">
         </div>
         <div class="main-input-wrap">
-          <div class="input-wrap-container">
+          <div class="input-wrap-container"><h5>Change book information by pressing Enter</h5>
           <div class="change-container">
             <input id="input-title-change" placeholder="Title"></input>
             <input id="input-author-change" placeholder="Author"></input>
